Task card gap fix

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -126,6 +126,10 @@
       margin-left: 2rem;
     }
   }
+
+  @include respond(phone) {
+    gap: 1rem;
+  }
 }
 
 .overlay--new,
